updated some css and bootstrap tabs

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -104,13 +104,15 @@
 
               <!-- <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#test1" role="tab" aria-controls="nav-home" aria-selected="true"><code class="prettifyHTML codetab">HTML</code></a>
-                  <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#test2" role="tab" aria-controls="nav-profile" aria-selected="false"><code class="prettifyCSS codetab">CSS</code></a>
-                  <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#test3" role="tab" aria-controls="nav-contact" aria-selected="false"><code class="prettifyJS codetab">JS</code></a>
+                  <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#-test1" role="tab" aria-controls="nav-home" aria-selected="true"><code class="prettifyHTML codetab">HTML</code></a>
+                  <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#-test2" role="tab" aria-controls="nav-profile" aria-selected="false"><code class="prettifyCSS codetab">CSS</code></a>
+                  <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#-test3" role="tab" aria-controls="nav-contact" aria-selected="false"><code class="prettifyJS codetab">JS</code></a>
+                  <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#-test4" role="tab" aria-controls="nav-contact" aria-selected="false"><code class="prettifyResult codetab">Result</code></a>
                 </div>
               </nav>
+              <br>
               <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="test1" role="tabpanel" aria-labelledby="nav-home-tab">
+                <div class="tab-pane fade show active" id="-test1" role="tabpanel" aria-labelledby="nav-home-tab">
                   <div class='CodeBoxL'>
                     <pre class="prettyprint linenums lang-html CodeBoxBuffer">
 &lt;!DOCTYPE html&gt;
@@ -125,7 +127,7 @@
 &lt;/html&gt;</pre>
                   </div>
                 </div>
-                <div class="tab-pane fade" id="test2" role="tabpanel" aria-labelledby="nav-profile-tab">
+                <div class="tab-pane fade" id="-test2" role="tabpanel" aria-labelledby="nav-profile-tab">
                   <div class='CodeBoxL'>
                     <pre class="prettyprint linenums lang-css CodeBoxBuffer">
 body {
@@ -134,7 +136,7 @@ body {
 }</pre>
                   </div>
                 </div>
-                <div class="tab-pane fade" id="test3" role="tabpanel" aria-labelledby="nav-contact-tab">
+                <div class="tab-pane fade" id="-test3" role="tabpanel" aria-labelledby="nav-contact-tab">
                   <div class='CodeBoxL'>
                     <pre class="prettyprint linenums lang-js CodeBoxBuffer">
 let cool = 100;
@@ -142,6 +144,11 @@ let dev = true;
 if(1 == 0){
   // Everything breakes
 }</pre>
+                  </div>
+                </div>
+                <div class="tab-pane fade" id="-test4" role="tabpanel" aria-labelledby="nav-contact-tab">
+                  <div class="resultBox">
+                    <p> This is a result</p>
                   </div>
                 </div>
               </div> -->
