Cleaned HTML and CSS removed unused code

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -154,7 +154,7 @@
               <section id="section_HTML">
                 <a id="_HTML">
                   <h2>
-                    <codeG>HTML</codeG>
+                    <codeG>&lt;HTML></codeG>
                   </h2>
                 </a>
 
@@ -162,7 +162,8 @@
                   <h2>Getting Started</h2>
                 </a>
                 <p>
-                  You may have done some HTML and CSS in CodeCombat, but this is to show you what it looks
+
+                  You may have done some <span style="color: #ed5565;">HTML</span> and <span style="color: #90EE90;">CSS</span> in CodeCombat, but this is to show you what it looks
                   like when it’s not in a game.
                   </br>
                   </br>
@@ -727,7 +728,7 @@
                 </div>
                 <p>
                   <code class="prettifyHTML">&lt;table>&lt;/table></code> creates your table the
-                  <code>style=”width=100%”</code> is CSS code that you
+                  <code class="prettifyCSS">style=”width=100%”</code> is CSS code that you
                   don’t need to worry about until later in this
                   lesson.
                 </p>
