--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
                 <a id="p5" href="introp5.html"><h2>Intro p5</h2></a>
                 <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and simple physics.</p>
 
-                <a id="firstwebsite" href="CCProjects/WD1/index.html"><h2>First Website!</h2></a>
-                <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and simple physics.</p>
+                <a id="firstwebsite" href="CCProjects/WD1/index.html"><h2>WD1</h2></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <a id="wd2" href="CCProjects/WD2/index.html"><h2>WD2</h2></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
             </article>
