--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -480,7 +480,7 @@
       made to make information easy to read and enjoy!
     &lt;/p>
     &lt;p>
-      Notice that I added a sectiond paragraph tag and it pushed me to a
+      Notice that I added a section paragraph tag and it pushed me to a
       new line?
     &lt;/p>
   &lt;/body&gt;
@@ -495,7 +495,7 @@
                         made to make information easy to read and enjoy!
                       </p>
                       <p>
-                        Notice that I added a sectiond paragraph tag and it pushed me to a
+                        Notice that I added a section paragraph tag and it pushed me to a
                         new line?
                       </p>
                     </div>
@@ -540,7 +540,7 @@
     &lt;p>
       I want to show you how to &lt;b>bold&lt;/b>
       words and how to &lt;i>italicise&lt;/i>
-      words, because the help you &lt;u>emphasis&lt;/u>
+      words, because they help you &lt;u>emphasis&lt;/u>
       to words that we deem &lt;del>really&lt;/del>
       incredibly &lt;b>important&lt;/b>!
     &lt;/p>
