Finished with converting WD2

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -36,7 +36,7 @@
               <div class="navGroups">
                 <div class="navGroup">
                   <a href="#top">
-                    <h3 class="navGroupCategoryTitle">Project 1</h3>
+                    <h3 class="navGroupCategoryTitle">WD 1</h3>
                   </a>
                   <ul id="toc">
                     <progress id="pb" value="0" max="100"></progress>
@@ -1434,59 +1434,59 @@ p {
               look like the one in your header.</p>
             <p>There are many other elements in here, can you figure out what they all mean? (We will
               expand more on this in a web development specific course).</p>
+        </section>
 
-            <a id="requirements">
+        <a id="requirements">
               <h2>
                 <codeB>Requirements</codeB>
               </h2>
             </a>
-            <p>Now that we’ve gone over all the basic aspects of a basic HTML/CSS website, you are going to
-              make a website based on whatever you would like! The requirements of this project are as
-              follows:</p>
-            <ol>
-              <li>Website must use proper file hierarchy and structure</li>
-              <ol>
-                <li>First page index.html</li>
-                <li>css and images folder</li>
-              </ol>
-              <li>Website must have a title tag</li>
-              <li>Add a floating header</li>
-              <ol>
-                <li>Have at least one styled button on it</li>
-              </ol>
-              <li>Body of website must include the following</li>
-              <ol>
-                <li>One header and one paragraph tag</li>
-                <li>Bold or italicize at least one word</li>
-                <li>A list (either ordered or unordered)</li>
-                <li>One line break</li>
-                <li>One image</li>
-                <li>One table</li>
-              </ol>
-              <li>
-                Must have more than one page (second page just needs to follow proper html structure,
-                you don’t need to make it as complicated as the main page unless you want to).
-              </li>
-              <li>Have your CSS file separate and placed in the appropriate folder</li>
-              <li>Other CSS requirements</li>
-              <ol>
-                <li>Have one proper use of a class</li>
-                <li>Have one proper use of an id</li>
-                <li>Style an element that is neither of the above (body would be a good one)</li>
-              </ol>
-            </ol>
-            <p>Pages must look nice and flow well together, this must look like one big project and not just a
-              bunch of random elements put together.
-            </p>
-            <p> <a href="https://www.w3schools.com/"><u>W3Schools</u> </a> is a great resource to see what you can do in your
-              website. Highly recommended you give it a check</p>
-            <a id="challenges">
+        <p>Now that we’ve gone over all the basic aspects of a basic HTML/CSS website, you are going to
+          make a website based on whatever you would like! The requirements of this project are as
+          follows:</p>
+        <ol>
+          <li>Website must use proper file hierarchy and structure</li>
+          <ol>
+            <li>First page index.html</li>
+            <li>css and images folder</li>
+          </ol>
+          <li>Website must have a title tag</li>
+          <li>Add a floating header</li>
+          <ol>
+            <li>Have at least one styled button on it</li>
+          </ol>
+          <li>Body of website must include the following</li>
+          <ol>
+            <li>One header and one paragraph tag</li>
+            <li>Bold or italicize at least one word</li>
+            <li>A list (either ordered or unordered)</li>
+            <li>One line break</li>
+            <li>One image</li>
+            <li>One table</li>
+          </ol>
+          <li>
+            Must have more than one page (second page just needs to follow proper html structure,
+            you don’t need to make it as complicated as the main page unless you want to).
+          </li>
+          <li>Have your CSS file separate and placed in the appropriate folder</li>
+          <li>Other CSS requirements</li>
+          <ol>
+            <li>Have one proper use of a class</li>
+            <li>Have one proper use of an id</li>
+            <li>Style an element that is neither of the above (body would be a good one)</li>
+          </ol>
+        </ol>
+        <p>Pages must look nice and flow well together, this must look like one big project and not just a
+          bunch of random elements put together.
+        </p>
+        <p> <a href="https://www.w3schools.com/"><u>W3Schools</u> </a> is a great resource to see what you can do in your
+          website. Highly recommended you give it a check</p>
+        <a id="challenges">
               <h2>
                 <codeR>Challenges</codeR>
               </h2>
             </a>
-            <p>None yet!</p>
-        </section>
+        <p>None yet!</p>
         </article>
       </div>
       <!-- <div class="docs-prevnext"><a class="docs-prev button" href="#">← Lorem</a><a class="docs-next button" href="#">Ipsum →</a></div> -->
