--- a/CCProjects/WD2/index.html
+++ b/CCProjects/WD2/index.html
@@ -3,10 +3,6 @@
 
 <head>
   <title>Implementing Javascript</title>
-  <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-  </script>
-  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=css"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -18,6 +14,7 @@
   <script type="text/javascript" src="../../js/toc.js"></script>
   <script type="text/javascript" src="../../js/question.js"></script>
   <script type="text/javascript" src="../../js/smoothscroll.js"></script>
+  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=css"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../../css/prettyPrint.css">
   <link rel="stylesheet" href="../../css/styles.css">
@@ -33,6 +30,7 @@
 
   <div class="navPusher">
     <div class="docMainWrapper wrapper">
+
       <div class="container docsNavContainer">
         <nav class="toc">
           <div class="toggleNav">
@@ -82,7 +80,6 @@
                   <codeG>Learning Goals</codeG>
                 </h2>
               </a>
-
               <ol>
                 <li>Adding Javascript to your website</li>
                 <ol>
@@ -109,19 +106,14 @@
               </ol>
 
               <section id="section_JSIYWS">
-                <a id="_JSIYWS">
-                  <h1>
-                    <codeG>Javascript In Your Website</codeG>
-                  </h1>
-                </a>
+                <a id="_JSIYWS"><h1><codeG>Javascript In Your Website</codeG></h1></a>
                 <p>
                   Javascript is a powerful piece of the web development puzzle. Without it, many websites
                   wouldn’t function. This isn’t the only language that adds functionality, but it is the most common
                   in basic websites due to its simplicity and easy integration.
                 </p>
-                <a id="0AST">
-                <h2>Adding <code class="prettifyJS">&lt;script></code> tags:</h2>
-              </a>
+
+                <a id="0AST"><h2>Adding <code class="prettifyJS">&lt;script></code> tags</h2></a>
                 <p>
                   Just like learning CSS in the previous web dev course, javascript has many ways of being used in
                   a site
@@ -191,15 +183,9 @@
               </section>
 
               <section id="section_HANDLINGEVENTS">
+                <a id="_HANDLINGEVENTS"><h1><codeG>Handling Events</codeG></h1></a>
 
-                <a id="_HANDLINGEVENTS">
-                <h1>
-                  <codeG>Handling Events</codeG>
-                </h1>
-              </a>
-                <a id="0alert">
-                <h2><code class="prettifyJS">alert()</code></h2>
-              </a>
+                <a id="0alert"><h2><code class="prettifyJS">alert()</code></h2></a>
                 <p>
                   Basic alerts are cool and all, but how does this add functionality at all? The first step is to see
                   how the <code class="prettifyJS">onclick</code> property works.
@@ -260,9 +246,8 @@
                   <code class="prettifyJS">&lt;script>&lt;/script></code> tags above.)
                 </p>
                 <br>
-                <a id="0innerHTML">
-                <h2><code class="prettifyJS">innerHTML</code></h2>
-              </a>
+
+                <a id="0innerHTML"><h2><code class="prettifyJS">innerHTML</code></h2></a>
                 <p>
                   We’ve used the button to make alerts, but there is so much more we can do.
                   Let’s explore a few of the different possibilities from a button click.
@@ -330,9 +315,8 @@
                   <code class="prettifyHTML">innerHTML</code>: Is exactly as it sounds. The HTML inside of the element
                 </p>
                 <br>
-                <a id="0src">
-                <h2><code class="prettifyJS">src</code></h2>
-              </a>
+
+                <a id="0src"><h2><code class="prettifyJS">src</code></h2></a>
                 <p> Other things that you can do is change pictures based on what was pressed. </p>
                 <h3 class="paraTitle">Changing an image</h3>
 
@@ -391,16 +375,12 @@
               </section>
 
               <section id="section_INPUT">
-
-                <a id="_INPUT">
-                <h1>
-                  <codeG>Input</codeG>
-                </h1>
-              </a>
+                <a id="_INPUT"><h1><codeG>Input</codeG></h1></a>
                 <p>
                   Beyond buttons, input fields are a very common form of HTML elements that use javascript
                   functionality. Because this one is a little more complicated, we’ll do this in multiple steps.
                 </p>
+
                 <a id="0calculator">
                 <h2><code class="prettifyJS">Calculator</code></h2>
               </a>
@@ -629,13 +609,7 @@
               </section>
 
               <section id="section_CSSJS">
-
-
-                <a id="_CSSJS">
-                <h1>
-                  <codeG>CSS and JS</codeG>
-                </h1>
-              </a>
+                <a id="_CSSJS"><h1><codeG>CSS and JS</codeG></h1></a>
 
                 <a id="0hover">
                 <h2><code class="prettifyJS">Hover</code></h2>
@@ -766,12 +740,10 @@
                 website through javascript. Go to <a href="https://www.w3schools.com/jS/js_examples.asp"><u>W3 Schools</u></a> if you’re
                 curious to see more of what you can do.
               </p>
-              <a id="challenges">
-                    <h2>
-                      <codeR>Challenges</codeR>
-                    </h2>
-                  </a>
+
+              <a id="challenges"><h2><codeR>Challenges</codeR></h2></a>
               <p>None yet!</p>
+
             </article>
           </div>
           <!-- <div class="docs-prevnext"><a class="docs-prev button" href="#">← Lorem</a><a class="docs-next button" href="#">Ipsum →</a></div> -->
