Fixed error in innerHTML

--- a/CCProjects/WD2/index.html
+++ b/CCProjects/WD2/index.html
@@ -292,11 +292,11 @@
                   <div class="tab-pane fade" id="-result2" role="tabpanel" aria-labelledby="nav-contact-tab">
                     <div class="resultBox">
                       <h1>Press the button</h1>
-                      <button onclick="change('What have you done?!?!?')">Click me!</button>
-                      <p id="changeMe">I'm a simple paragraph...</p>
+                      <button onclick="change1('What have you done?!?!?')">Click me!</button>
+                      <p id="changeMe2">I'm a simple paragraph...</p>
                       <script type="text/javascript">
-                        function change(message) {
-                          var par = document.getElementById("changeMe");
+                        function change1(message) {
+                          var par = document.getElementById("changeMe2");
                           par.innerHTML = message;
                         }
                       </script>
