Fixed progress bar bug

--- a/CCProjects/WD3/index.html
+++ b/CCProjects/WD3/index.html
@@ -12,10 +12,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
   <script type="text/javascript" src="../../js/buildTOC.js"></script>
-  <script type="text/javascript" src="../../js/scrolling.js"></script>
-  <script type="text/javascript" src="../../js/progressbar.js"></script>
   <script type="text/javascript" src="../../js/toc.js"></script>
+  <script type="text/javascript" src="../../js/progressbar.js"></script>
   <script type="text/javascript" src="../../js/question.js"></script>
+  <script type="text/javascript" src="../../js/scrolling.js"></script>
   <script type="text/javascript" src="../../js/smoothscroll.js"></script>
   <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=css"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -1282,6 +1282,9 @@
                       allow users to log in to your website. Hopefully, you’re not scared away by PHP. Because you’ll
                       still have one more project to get through later!
                     </p>
+                  </div>
+                  <div class="finalResultWapper">
+                    <img src="images/final.PNG" alt=""></img>
                   </div>
                 </section>
 
