--- a/CCProjects/WD3/index.html
+++ b/CCProjects/WD3/index.html
@@ -1033,7 +1033,7 @@
                   <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="-php4" role="tabpanel" aria-labelledby="nav-home-tab">
                       <div class='CodeBoxL'>
-                        <pre class="prettyprint linenums lang-php CodeBoxBuffer">
+                        <pre style="padding-left:15px;" class="prettyprint linenums lang-php CodeBoxBuffer">
 &lt;!DOCTYPE html>
 &lt;html>
   &lt;head>
@@ -1152,7 +1152,7 @@
                   <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="-php4" role="tabpanel" aria-labelledby="nav-home-tab">
                       <div class='CodeBoxL'>
-                        <pre class="prettyprint linenums lang-php CodeBoxBuffer">
+                        <pre style="padding-left:15px;" class="prettyprint linenums lang-php CodeBoxBuffer">
 &lt;!DOCTYPE html>
 &lt;html>
   &lt;head>
