--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               <li class=""><a href="projects/introp5/project1/index.html" target="_self">Intro p5</a></li>
               <li class=""><a href="CCProjects/WD1/index.html" target="_self">WD1</a></li>
               <li class=""><a href="CCProjects/WD2/index.html" target="_self">WD2</a></li>
+              <li class=""><a href="CCProjects/WD3/index.html" target="_self">WD3</a></li>
               <!-- <li class="navSearchWrapper reactNavSearchWrapper"><span class="algolia-autocomplete" style="position: relative; display: inline-block; direction: ltr;"><input type="text" id="search_input_react" placeholder="Search" title="Search" class="aa-input" autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-labelledby="search_input_react" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;"><pre aria-hidden="true" style="position: absolute; visibility: hidden; white-space: pre; font-family: Arial; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 300; word-spacing: 0px; letter-spacing: normal; text-indent: 0px; text-rendering: auto; text-transform: none;"></pre><span class="aa-dropdown-menu" role="listbox" id="algolia-autocomplete-listbox-0" style="position: absolute; top: 100%; z-index: 100; display: none; left: 0px; right: auto;"><div class="aa-dataset-1"></div></span></span></li> -->
             </ul>
           </nav>
@@ -34,8 +35,9 @@
                 <div class="navGroup"><h3 class="navGroupCategoryTitle">Class</h3>
                   <ul>
                     <li class="navListItem"><a class="navItem" href="#p5">Intro p5</a></li>
-                    <li class="navListItem"><a class="navItem" href="#firstwebsite">WD1</a></li>
-                    <li class="navListItem"><a class="navItem" href="#firstwebsite">WD2</a></li>
+                    <li class="navListItem"><a class="navItem" href="#wd1">WD1</a></li>
+                    <li class="navListItem"><a class="navItem" href="#wd2">WD2</a></li>
+                    <li class="navListItem"><a class="navItem" href="#wd3">WD3</a></li>
                   </ul>
                 </div>
               </div>
@@ -64,12 +66,17 @@
                   like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and sketches with simple physics.</p>
 
                 <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/CCProjects/WD1" rel="noreferrer noopener">GitHub</a>
-                <a id="firstwebsite" href="CCProjects/WD1/index.html"><h2>WD1 - <code class="prettifyCSS"> Presentation </code></h2></a>
+                <a id="wd1" href="CCProjects/WD1/index.html"><h2>WD1 - <code class="prettifyCSS"> Presentation </code></h2></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                 <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/CCProjects/WD2" rel="noreferrer noopener">GitHub</a>
                 <a id="wd2" href="CCProjects/WD2/index.html"><h2>WD2 - <code class="prettifyCSS"> Presentation </code></h2></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/CCProjects/WD3" rel="noreferrer noopener">GitHub</a>
+                <a id="wd3" href="CCProjects/WD3/index.html"><h2>WD3 - <code class="prettifyCSS"> Presentation </code></h2></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
