--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               <li class=""><a href="CCProjects/WD1/index.html" target="_self">WD1</a></li>
               <li class=""><a href="CCProjects/WD2/index.html" target="_self">WD2</a></li>
               <li class=""><a href="CCProjects/WD3/index.html" target="_self">WD3</a></li>
+              <li class=""><a href="https://mm909.github.io/Central-Scroll/" target="_self">Central Scroll</a></li>
               <!-- <li class="navSearchWrapper reactNavSearchWrapper"><span class="algolia-autocomplete" style="position: relative; display: inline-block; direction: ltr;"><input type="text" id="search_input_react" placeholder="Search" title="Search" class="aa-input" autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-labelledby="search_input_react" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;"><pre aria-hidden="true" style="position: absolute; visibility: hidden; white-space: pre; font-family: Arial; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 300; word-spacing: 0px; letter-spacing: normal; text-indent: 0px; text-rendering: auto; text-transform: none;"></pre><span class="aa-dropdown-menu" role="listbox" id="algolia-autocomplete-listbox-0" style="position: absolute; top: 100%; z-index: 100; display: none; left: 0px; right: auto;"><div class="aa-dataset-1"></div></span></span></li> -->
             </ul>
           </nav>
@@ -32,12 +33,13 @@
           <div class="toggleNav">
             <section class="navWrapper wrapper">
               <div class="navGroups">
-                <div class="navGroup"><h3 class="navGroupCategoryTitle">Class</h3>
+                <div class="navGroup"><h3 class="navGroupCategoryTitle">Things</h3>
                   <ul>
-                    <li class="navListItem"><a class="navItem" href="#p5">Intro p5</a></li>
+                    <li class="navListItem"><a class="navItem" href="#wd3">Central Scroll</a></li>
                     <li class="navListItem"><a class="navItem" href="#wd1">WD1</a></li>
                     <li class="navListItem"><a class="navItem" href="#wd2">WD2</a></li>
                     <li class="navListItem"><a class="navItem" href="#wd3">WD3</a></li>
+                    <li class="navListItem"><a class="navItem" href="#p5">Intro p5</a></li>
                   </ul>
                 </div>
               </div>
@@ -59,11 +61,10 @@
                   <br>
                   Select a class and work through each project. Each project completion is <codeG>1000 points</codeG> and each class completion is <codeG>2000 points.</codeG>
                 </p> -->
-
-                <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/projects" rel="noreferrer noopener">GitHub</a>
-                <a id="p5" href="projects/introp5/project1/index.html"><h2>Intro p5 - <code class="prettifyHTML"> Content </code> </h2></a>
-                <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games
-                  like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and sketches with simple physics.</p>
+                <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/CCProjects/WD3" rel="noreferrer noopener">GitHub</a>
+                <a id="wd3" href="https://mm909.github.io/Central-Scroll/"><h2>Central Scroll - <code class="prettifyJS"> From Scratch </code></h2></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                 <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/CCProjects/WD1" rel="noreferrer noopener">GitHub</a>
                 <a id="wd1" href="CCProjects/WD1/index.html"><h2>WD1 - <code class="prettifyCSS"> Presentation </code></h2></a>
@@ -79,6 +80,11 @@
                 <a id="wd3" href="CCProjects/WD3/index.html"><h2>WD3 - <code class="prettifyCSS"> Presentation </code></h2></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/projects" rel="noreferrer noopener">GitHub</a>
+                <a id="p5" href="projects/introp5/project1/index.html"><h2>Intro p5 - <code class="prettifyHTML"> Content </code> </h2></a>
+                <p>p5.js is a powerful library writen in Java Script. In this class you will learn how to look at an end product, like a game, and break it down into it's base parts. By doing this we can better understand how to build common games
+                  like pong, snake, and flappy bird. And other applications like purple rain, fireworks, and sketches with simple physics.</p>
 
             </article>
           </div>
